# elonafoobar

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .travis.yml  0-1.sh  1-2.sh  3-4.sh  4-5.rb  7.cpp  CHANGELOG-ja.md  CHANGELOG-jp.md  CHANGELOG.md  CMakeLists.txt  CODE_STYLE.md  CONTRIBUTING.md  CREDITS  CREDITS.txt  Cargo.toml  Doxyfile  LICENSE  LICENSE.txt  Makefile  Makefile.win  PULL_REQUEST_TEMPLATE.md  README-jp.md  README.md  __init__.lua  ability.cpp  ability.hpp  access_character_info.cpp  access_item_db.cpp  access_item_db.hpp  access_race_info.cpp  adventurer.cpp  ai.cpp  animation.cpp  animation.hpp  (+179 more)
cmake/lua/: CMakeLists.txt  lua_wstring_5.3.4.patch
elonafoobar/: Cargo.toml  build.rs
elonafoobar/src/: api.rs  cli.rs  config.rs  engine.rs  fmt.rs  fs.rs  init.rs  lib.rs  mods.rs  net.rs  profile.rs  run.rs  types.rs  version.rs
elonafoobar/src/api/: class_app.rs  class_color.rs  class_image.rs  class_mods.rs  class_rngs.rs  module_app.rs  module_fs.rs  module_graphics.rs  module_i18n.rs  module_log.rs  module_mods.rs  module_random.rs
elonafoobar/src/fs/: dirs.rs  files.rs
elonafoobar/src/mods/: id.rs  manifest.rs  resolve.rs
elonafoobar/src/types/: dice.rs  enums.rs  position.rs  story_quest.rs
snail/: CMakeLists.txt  Makefile  application.cpp  application.hpp  blend_mode.hpp  color.cpp  color.hpp  effect.hpp  font.cpp  font.hpp  fpsmanager.cpp  fpsmanager.hpp  hsp.cpp  hsp.hpp  image.cpp  image.hpp  input.cpp  input.hpp  node.hpp  rect.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  size.hpp  window.cpp  window.hpp
snail/application/: headless.cpp  headless.hpp  sdl.cpp  sdl.hpp
snail/audio/: sdl.cpp
snail/detail/: sdl.cpp  sdl.hpp  sdl_headless.cpp
snail/hsp/: headless.cpp  sdl.cpp
snail/lib/: util.hpp
snail/renderer/: headless.cpp  sdl.cpp
src/elona/: Android.mk  Android.mk.in  CMakeLists.txt  ability.cpp  ability.hpp  access_character_info.cpp  access_item_db.cpp  activity.cpp  activity.hpp  adventurer.cpp  adventurer.hpp  adventurer_log.hpp  ai.cpp  ai.hpp  animation.cpp  animation.hpp  area.cpp  area.hpp  artifact_log.hpp  attack.cpp  attack.hpp  audio.cpp  audio.hpp  autopick.cpp  autopick.hpp  blending.cpp  blending.hpp  blending_recipe_memory.hpp  body_part.cpp  body_part.hpp  browser.cpp  browser.hpp  buff.cpp  buff.hpp  buff_utils.hpp  building.cpp  building.hpp  calc.cpp  calc.hpp  card.cpp  (+217 more)
src/elona/_putit/: ability.cpp  buff.cpp  character.cpp  continuous_action.cpp  enchantment.cpp  foobar_data.cpp  item.cpp  position.cpp  version.hpp
src/elona/config/: config.cpp  config.hpp  config_def.cpp  config_def.hpp  config_menu.hpp  create_config_screen.cpp  create_config_screen.hpp  set_option.cpp
src/elona/data/: base_database.hpp  common.hpp  id.hpp  init.cpp  init.hpp  lua_lazy_cache.hpp  types.cpp  types.hpp  util.cpp  util.hpp
src/elona/dialog/: dialog.cpp  dialog.hpp  dialog_data.cpp  dialog_data.hpp  dialog_decoder.cpp  dialog_decoder.hpp
src/elona/eobject/: eobject.hpp  forward.hpp  id.hpp  id_table.hpp  pool.cpp  pool.hpp  ref.hpp
src/elona/foobar_map/: foobar_map.hpp  init_map.cpp  init_map.hpp  map_instantiator.cpp  map_instantiator.hpp  map_loader.cpp  map_loader.hpp  tileset_export_progress_prompt.cpp  tileset_export_progress_prompt.hpp  tsx_exporter.cpp  tsx_exporter.hpp  util.cpp  util.hpp
src/elona/keybind/: input_context.cpp  input_context.hpp  key_names.cpp  keybind.cpp  keybind.hpp  keybind_actions.cpp  keybind_deserializer.cpp  keybind_deserializer.hpp  keybind_manager.cpp  keybind_manager.hpp  keybind_serializer.cpp  keybind_serializer.hpp  macro_action_queue.cpp  macro_action_queue.hpp
src/elona/lua_env/: api_manager.cpp  api_manager.hpp  config_manager.cpp  config_manager.hpp  config_table.hpp  console.cpp  console.hpp  data_manager.cpp  data_manager.hpp  data_table.hpp  event_manager.cpp  event_manager.hpp  export_manager.cpp  export_manager.hpp  fmt.hpp  handle_manager.cpp  handle_manager.hpp  i18n_function_manager.cpp  i18n_function_manager.hpp  i18n_manager.cpp  i18n_manager.hpp  interface.cpp  interface.hpp  loaded_chunk_cache.hpp  lson.cpp  lson.hpp  lua_console.cpp  lua_console.hpp  lua_enums.hpp  lua_env.cpp  lua_env.hpp  lua_submodule.hpp  mod_env.hpp  mod_manager.cpp  mod_manager.hpp  mod_manifest.cpp  mod_manifest.hpp  mod_serializer.cpp  mod_serializer.hpp  mod_version_resolver.cpp  (+3 more)
src/elona/mapeditor/: command.cpp  command.hpp  design_mode.cpp  design_mode.hpp  undo_history.cpp  undo_history.hpp
src/elona/pic_loader/: extent.hpp  pic_loader.cpp  pic_loader.hpp  tinted_buffers.cpp  tinted_buffers.hpp
src/elona/profile/: profile.cpp  profile.hpp  profile_manager.cpp  profile_manager.hpp
src/elona/serialization/: binary.hpp  boost.hpp  concepts.hpp  iarchive.hpp  json.hpp  macros.hpp  oarchive.hpp  serialization.hpp  serialize.hpp  std.hpp  utils.hpp
src/elona/types/: skill.hpp
src/elona/ui/: menu_cursor_history.hpp  simple_prompt.hpp  ui_menu.hpp  ui_menu_adventurers.cpp  ui_menu_adventurers.hpp  ui_menu_alias.cpp  ui_menu_book.cpp  ui_menu_character_sheet.cpp  ui_menu_character_sheet.hpp  ui_menu_charamake_alias.cpp  ui_menu_charamake_alias.hpp  ui_menu_charamake_attributes.cpp  ui_menu_charamake_attributes.hpp  ui_menu_charamake_class.cpp  ui_menu_charamake_class.hpp  ui_menu_charamake_gender.cpp  ui_menu_charamake_gender.hpp  ui_menu_charamake_race.cpp  ui_menu_charamake_race.hpp  ui_menu_chat_history.cpp  ui_menu_chat_history.hpp  ui_menu_composite.hpp  ui_menu_config.cpp  (+57 more)
src/snail/: Android.mk  Android.mk.in  CMakeLists.txt  Makefile  android.cpp  android.hpp  application.hpp  audio.cpp  audio.hpp  blend_mode.hpp  color.hpp  effect.hpp  filedialog.cpp  filedialog.hpp  filesystem.hpp  font.cpp  font.hpp  fpsmanager.cpp  fpsmanager.hpp  hsp.hpp  image.cpp  image.hpp  input.cpp  input.hpp  messagebox.hpp  node.hpp  rect.hpp  renderer.hpp  scene.cpp  scene.hpp  size.hpp  surface.cpp  surface.hpp  touch_input.cpp  touch_input.hpp  window.cpp  window.hpp
src/spider/: Android.mk.in  CMakeLists.txt  README.md  http.hpp
(+2505 files in other folders)
